[package]
name = "vesting"
version = "0.1.5"
authors = ["0xf333 <@0xf333:matrix.org>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.3", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std", 
    "scale/std", 
    "scale-info/std"
]
ink-as-dependency = []

